<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.requea.dysoweb</groupId>
	<artifactId>main</artifactId>
	<packaging>pom</packaging>
	<version>1.0.53-SNAPSHOT</version>
	<name>Requea Dysoweb</name>
	<url>https://www.requea.com</url>
	<properties>
		<!-- dysowebVersion sould be the same number as dysoweb Version, 
			but without the -SNAPSHOT if there is one -->
		<dysowebVersion>1.0.53</dysowebVersion>
	</properties>
	<modules>
		<module>dysoweb</module>
		<module>dysoweb.demo</module>
		<module>portlet</module>
		<module>sandbox</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>javax.servlet.jsp-api</artifactId>
				<version>2.3.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
			    <groupId>portlet-api</groupId>
			    <artifactId>portlet-api</artifactId>
			    <version>1.0</version>
			</dependency>
			<dependency>
				<groupId>org.apache.felix</groupId>
				<artifactId>org.apache.felix.framework</artifactId>
				<version>6.0.2.1</version>
			</dependency>
			<dependency>
				<groupId>org.osgi</groupId>
				<artifactId>org.osgi.core</artifactId>
				<version>6.0.0</version>
			</dependency>
	        <dependency>
	            <groupId>org.apache.felix</groupId>
	            <artifactId>org.osgi.service.obr</artifactId>
	            <version>1.0.2</version>
	        </dependency>
	        <dependency>
	            <groupId>org.apache.felix</groupId>
	            <artifactId>org.apache.felix.shell</artifactId>
	            <version>1.4.3</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>dysoweb-core</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.api</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.utils.tags</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.shell</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.panel</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.service.obr</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.obr</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.processor</artifactId>
	            <version>${project.version}</version>
	        </dependency>
	        <dependency>
	            <groupId>com.requea.dysoweb</groupId>
	            <artifactId>com.requea.dysoweb.log4j</artifactId>
	            <version>${project.version}</version>
	        </dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>requea-maven-repository</id>
			<name>Requea repository</name>
			<url>https://maven.requea.com/repo/</url>
		</repository>
		<repository>
			<id>spring-plugin-release</id>
			<name>Spring Plugins Repository</name>
			<url>https://repo.spring.io/plugins-release/</url>
		</repository>
		<repository>
			<id>mule-soft-repository</id>
			<name>Mule soft repository</name>
			<url>https://repository.mulesoft.org/nexus/content/repositories/public/</url>
		</repository>
	</repositories>

    <distributionManagement>
        <repository>
            <id>requea-maven-repository</id>
            <name>Requea repository</name>
            <url>file:/home/maven/repo</url>
        </repository>
    </distributionManagement>

	<scm>
	    <url>scm:git:https://github.com/REQUEA/dysoweb.git</url>
	    <connection>scm:git:git://github.com/REQUEA/dysoweb.git</connection>
	    <developerConnection>scm:git:git@github.com:REQUEA/dysoweb.git</developerConnection>
	  <tag>main-1.0.53</tag>
  </scm>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>@{project.version}-${sourcebranch}</tagNameFormat>
					<localCheckout>true</localCheckout>
					<preparationGoals>clean install</preparationGoals>
					<checkModificationExcludes>
						<checkModificationExclude>pom.xml</checkModificationExclude>
					</checkModificationExcludes>
				</configuration>
			</plugin>
	    </plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
				<plugin>
	                <groupId>org.apache.felix</groupId>
	                <artifactId>maven-bundle-plugin</artifactId>
					<version>1.4.3</version>
					<extensions>true</extensions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
